# ast-bro

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  test.rs
.github/workflows/: release.yml
Formula/: ast-bro.rb  ast-outline.rb
cli-python/: .gitignore  README.md  pyproject.toml
cli-python/ast_bro_cli/: __init__.py  __main__.py
cli-python/ast_outline_cli/: __init__.py  __main__.py
cli-typescript/: README.md  package.json
skills/ast-bro/: SKILL.md
skills/ast-outline/: SKILL.md
src/: context.rs  core.rs  file_filter.rs  impact.rs  lib.rs  main.rs  main_helpers.rs  path_glob.rs  project_root.rs  prompt.rs
src/adapters/: base.rs  cpp.rs  csharp.rs  go.rs  java.rs  json.rs  kotlin.rs  markdown.rs  mod.rs  php.rs  powershell.rs  python.rs  ruby.rs  rust.rs  scala.rs  sql.rs  toml.rs  typescript.rs  yaml.rs
src/calls/: build.rs  cli.rs  cli_helpers.rs  graph.rs  mcp.rs  mod.rs  pass.rs  render.rs  resolve.rs  trace.rs  traverse.rs
src/graph_cache/: cache.rs  delta.rs  mod.rs  shared.rs
src/hook/: claude_code.rs  decide.rs  event.rs  gemini.rs  io.rs  mod.rs
src/installers/: aider.rs  claude_code.rs  codex.rs  common.rs  copilot.rs  cursor.rs  gemini.rs  io.rs  json_hook.rs  json_object.rs  marker_block.rs  mod.rs  paths.rs  tabnine.rs  toml_object.rs
src/mcp/: mod.rs  tools.rs
src/run/: cli.rs  mod.rs
src/search/: cache.rs  chunker.rs  cli.rs  download.rs  embed.rs  format.rs  index.rs  mcp.rs  mod.rs  query.rs  ranking.rs  shared.rs
src/squeeze/: mod.rs  render.rs
src/surface/: entry.rs  entry_point.rs  fallback.rs  imports.rs  manifest.rs  mod.rs  module_graph.rs  python.rs  render.rs  rust.rs  scala.rs  typescript.rs
tests/: calls_e2e.rs  cli_ergonomics.rs  context_e2e.rs  cpp_adapter.rs  deps_e2e.rs  digest_format.rs  hook_e2e.rs  impact_e2e.rs  php_adapter.rs  ruby_adapter.rs  rust_adapter.rs  show_markdown.rs  squeeze_e2e.rs  surface_e2e.rs
tests/fixtures/cpp_adapter/: sample.cpp
tests/fixtures/php_adapter/: sample.php
tests/fixtures/ruby_adapter/: sample.rb
tests/fixtures/rust_adapter/: sample.rs
tests/fixtures/surface/java_fallback/: Greeter.java
tests/fixtures/surface/python_dunder/: __init__.py  helpers.py  sub.py
tests/fixtures/surface/python_no_dunder/: __init__.py
tests/fixtures/surface/rust_chained/: Cargo.toml
tests/fixtures/surface/rust_chained/src/: lib.rs
tests/fixtures/surface/rust_chained/src/net/: client.rs
tests/fixtures/surface/rust_rename/: Cargo.toml
tests/fixtures/surface/rust_rename/src/: lib.rs
tests/fixtures/surface/scala_exports/: api.scala  internal.scala
tests/fixtures/surface/ts_barrel/: package.json
tests/fixtures/surface/ts_barrel/src/: client.ts  index.ts  types.ts  util.ts
tests/fixtures/surface/ts_exports_field/: package.json
wiki/: architecture.md  calls.md  context.md  deps.md  file-filtering.md  impact.md  network-security.md  search.md  squeeze.md
