[package]
name = "ast-outline"
version = "0.3.0"
edition = "2021"
description = "Fast, AST-based structural outline for source files. Built for LLM coding agents and humans."
authors = ["Aero <aero.windwalker@gmail.com>"]
repository = "https://github.com/aeroxy/ast-outline"
license = "MIT"
readme = "README.md"
keywords = ["ast", "outline", "tree-sitter", "llm", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "wiki/**/",
    "AGENTS.md",
]

[dependencies]
ast-grep-core = "0.42.1"
ast-grep-language = "0.42.1"
tree-sitter = "0.26.3"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4.22"
rayon = "1.10"
tree-sitter-md = "0.5.3"
colored = "3.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
dirs = "5"
similar = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
sha2 = "0.10"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
safetensors = "0.6"
memmap2 = "0.9"
wide = "0.7"
regex = "1"
bincode = { version = "2", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
