[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ast-bro"
version = "2.1.0"
description = "Fast, AST-based code-navigation toolkit — downloads the Rust binary on install"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/aeroxy/ast-bro"
Repository = "https://github.com/aeroxy/ast-bro"
Documentation = "https://github.com/aeroxy/ast-bro#readme"

[project.scripts]
ast-bro = "ast_bro_cli:main"
ast-outline = "ast_bro_cli:main"
sb = "ast_bro_cli:main"
