[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ast-outline-cli"
version = "2.1.1"
description = "Final ast-outline release. Renamed to ast-bro — install via `pip install ast-bro`. Ships ast-bro and sb binaries alongside ast-outline."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["ast", "outline", "tree-sitter", "llm", "cli"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/aeroxy/ast-bro"
Repository = "https://github.com/aeroxy/ast-bro"
Documentation = "https://github.com/aeroxy/ast-bro#readme"

[project.scripts]
ast-outline = "ast_outline_cli:main"
ast-bro = "ast_outline_cli:main"
sb = "ast_outline_cli:main"
