[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ast-bro"
version = "2.3.0"
description = "Fast, AST-based code-navigation: shape, public API, deps & call graphs, hybrid semantic search, structural rewrite, and log squeezing. MCP server included."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["ast", "ast-outline", "tree-sitter", "mcp", "refactoring", "code-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/aeroxy/ast-bro"
Repository = "https://github.com/aeroxy/ast-bro"
Documentation = "https://github.com/aeroxy/ast-bro#readme"

[project.scripts]
ast-bro = "ast_bro_cli:main"
ast-outline = "ast_bro_cli:main"
sb = "ast_bro_cli:main"
